# pbe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate-release-artifacts.sh  rustfmt.toml
example-site/: pages.json  pages.yml  posts.json  posts.yml  server.json  server.yml
example-site/pages/: about.md  joke.md
example-site/posts/: 2023-01-01-hello-world.md  2023-02-01-commonmark-testing.md  2023-02-01-markdown-testing.md  2023-03-20-lorem-ipsum.md  2023-04-15-static-site-generators-are-boring.md  2023-05-08-plain-html-content.html  2023-06-27-donuts-are-pretty-great.md  2023-06-30-qbasic-is-fun.md
example-site/static/: site.css  syntax-highlighting.css
example-site/syntaxes/: QBasic.sublime-syntax
example-site/templates/: archive.html  base.html  latest_post.html  page.html  post.html  tag.html
example-site/templates/partials/: page.html  post.html
src/: commonmark.rs  config.rs  main.rs  markdown.rs  routes.rs  site.rs  util.rs  watcher.rs
syntax_to_css/: Cargo.toml  README.md
syntax_to_css/src/: main.rs
