[package]
name = "pbe"
description = "Personal Blog Engine. Gered's umpteenth take on a custom blog."
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
anyhow = "1.0.71"
chrono = "0.4.26"
itertools = "0.11.0"
log = "0.4.19"
pulldown-cmark = "0.9.3"
rss = "2.0.4"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
simple-log = "1.6.0"
syntect = "5.0.0"
tera = "1.19.0"
thiserror = "1.0.40"
url = "2.4.0"