[package]
name = "pbe"
description = "Personal Blog Engine. Gered's umpteenth take on a custom blog."
version = "0.2.1"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
anyhow = "1.0.71"
async-watcher = "0.1.1"
chrono = "0.4.26"
itertools = "0.11.0"
log = "0.4.19"
notify = "5.1.0"
pulldown-cmark = "0.9.3"
rss = "2.0.4"
serde = { version = "1.0.164", features = ["derive"]}
serde_yaml = "0.9.22"
simple-log = "1.6.0"
syntect = "5.0.0"
tera = "1.19.0"
thiserror = "1.0.40"
tokio = "1"
url = "2.4.0"

[build-dependencies]
chrono = "0.4.26"

[profile.release]
# settings that are mainly intended to reduce the size of the release binary while keeping the release binary tuned
# for performance. these alone reduce the binary size by over 50%, which is good enough in my opinion ...
strip = true
lto = true
codegen-units = 1
